--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="right">
-      <div class="photo"><img src="images/Ảnh Chúng Mình.jpg" alt="Ảnh của chúng ta"></div>
+      <div class="photo"><img src="" alt="Ảnh của chúng ta"></div>
     </div>
    
 </div>
