--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="right">
-      <div class="photo"><img src="" alt="Ảnh của chúng ta"></div>
+      <div class="photo"><img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExdXo5MHh3dHlidXBxNXYyb2QyMXR5d3ZheDhsYXY4dXI5ZjZrZDBpZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/6WFScxN6fi95z3YVQD/giphy.gif" alt="Ảnh của chúng ta"></div>
     </div>
    
 </div>
