--- a/cake.html
+++ b/cake.html
@@ -67,7 +67,7 @@
   </div>
 
   <!-- Nút toggle nhạc -->
-  <button class="btn" id="musicBtn">🎵 Phát nhạc</button>
+<button class="btn" id="musicBtn">🎵 Click this button to play music and waiting 5s to trans to next page ! please</button>
 <div>
   <!-- Audio ẩn -->
   <audio id="birthdayMusic" loop>
