--- a/cake.html
+++ b/cake.html
@@ -26,7 +26,7 @@
       </div>
 
       <!-- Nút thổi nến -->
-      <button id="blowBtn" class="btn">Thổi nến 🎂</button>
+      <button id="blowBtn" class="btn">Thổi nến click here and wait 10s 🎂</button>
     </div>
   </div>
 
