--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p>Anh đã chuẩn bị một ngày thật ấm áp cho em — có bánh, có nến, có những điều nhẹ nhàng và cả lời hứa. Mong em cảm thấy được yêu thương không chỉ hôm nay mà mỗi ngày.</p>
       </div>
       <div class="meta">
-        <button class="btn" id="musicBtn">🎵 Phát nhạc</button>
-        <a href="cake.html" class="btn secondary">🎂 Sang trang bánh kem</a>
+        <button class="btn" id="musicBtn">🎵 Music - Phát nhạc</button>
+        <a href="cake.html" class="btn secondary">🎂Next Page - Sang trang bánh kem</a>
       </div>
     </div>
     <div class="right">
